--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Button Board</title>
-    <link rel="stylesheet" href="./src/common/styles/colors.css" />
-    <link rel="stylesheet" href="./src/common/styles/fonts.css" />
-    <link rel="stylesheet" href="./src/common/styles/global.css" />
+    <link
+      rel="stylesheet"
+      href="./web-interface-src/common/styles/colors.css"
+    />
+    <link rel="stylesheet" href="./web-interface-src/common/styles/fonts.css" />
+    <link
+      rel="stylesheet"
+      href="./web-interface-src/common/styles/global.css"
+    />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/web-interface-src/main.jsx"></script>
   </body>
 </html>
