--- a/web/app-oobe/index.html
+++ b/web/app-oobe/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Button Board - Welcome</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="font-sans antialiased" id="root"></div>
     <script type="module" src="main.jsx"></script>
   </body>
 </html>
